ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-demo-tokra
spec:
  backend:
    serviceName: flask-demo-tokra
    servicePort: 80
